opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/janestreet_csv"
bug-reports: "https://github.com/janestreet/janestreet_csv/issues"
dev-repo: "git+https://github.com/janestreet/janestreet_csv.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/janestreet_csv/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "base"
  "bignum"
  "core"
  "core_extended"
  "core_kernel"
  "core_unix"
  "csvfields"
  "delimited_parsing"
  "fieldslib"
  "numeric_string"
  "ppx_jane"
  "re2"
  "textutils"
  "dune"              {>= "3.17.0"}
  "pcre"
  "tyxml"             {>= "4.3.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Tools for working with CSVs on the command line"
description: "
A suite of tools for working with CSVs from the command line.  It
contains subcommands for pretty printing, selecting, and combining
CSVs, as well as some conversions to other formats.
"
