(library
 (name csv_tool_lib)
 (public_name janestreet_csv.csv_tool_lib)
 (libraries textutils.ascii_table async bignum base.composition_infix core
   csvfields.csvlib delimited_parsing core_extended.delimited_kernel
   core_kernel.enum fieldslib core_unix.filename_unix numeric_string pcre re2
   core_unix.time_float_unix core_unix.time_ns_unix tyxml)
 (preprocess
  (pps ppx_jane)))
